// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`return faq search suggest for demission  1`] = `
Object {
  "hits": Array [
    Object {
      "_id": "6",
      "_index": "cdtn_document_test",
      "_score": 2.8796601,
      "_source": Object {
        "slug": "dans-les-hcr-quel-est-le-preavis-de-demission",
        "source": "faq",
        "title": "Dans les HCR, quel est le préavis de démission ?",
      },
      "_type": "cdtn_document_test",
      "highlight": Object {
        "text": Array [
          "Le préavis de <mark>démission</mark> diffère suivant la qualification.",
        ],
        "title": Array [
          "Dans les HCR, quel est le préavis de <mark>démission</mark> ?",
        ],
        "title.french_stemmed": Array [
          "Dans les HCR, quel est le préavis de <mark>démission</mark> ?",
        ],
      },
    },
    Object {
      "_id": "7",
      "_index": "cdtn_document_test",
      "_score": 2.1730855,
      "_source": Object {
        "slug": "joccupe-un-poste-de-vendeuse-en-boulangerie-patisserie-et-je-viens-de-poser-ma-demission-quelles-sont-les-consequences-dun-arret-maladie-pendant-la-periode-de-preavis-est-ce-que-je-peux-etre-sanctionnee-en-cas-darret-de-travail",
        "source": "faq",
        "title": "J'occupe un poste de vendeuse en boulangerie-pâtisserie et je viens de poser ma démission. Quelles sont les conséquences d’un arrêt maladie pendant la période de préavis ? Est-ce que je peux être sanctionnée en cas d’arrêt de travail ?",
      },
      "_type": "cdtn_document_test",
      "highlight": Object {
        "text": Array [
          "Vous pouvez être en arrêt maladie pendant le préavis de <mark>démission</mark> ; cette situation est sans incidence sur son déroulement et sur sa date d’expiration.",
        ],
        "title": Array [
          "J'occupe un poste de vendeuse en boulangerie-pâtisserie et je viens de poser ma <mark>démission</mark>. Quelles sont les conséquences d’un arrêt maladie pendant la période de préavis ?",
        ],
        "title.french_stemmed": Array [
          "J'occupe un poste de vendeuse en boulangerie-pâtisserie et je viens de poser ma <mark>démission</mark>. Quelles sont les conséquences d’un arrêt maladie pendant la période de préavis ?",
        ],
      },
    },
  ],
  "max_score": 2.8796601,
  "total": 2,
}
`;

exports[`return suggest results for demission 1`] = `
Object {
  "hits": Array [
    Object {
      "_id": "2",
      "_index": "cdtn_document_test",
      "_score": 4.252878,
      "_source": Object {
        "anchor": "#Comment-presenter-une-demission",
        "slug": "la-demission-comment-presenter-une-demission",
        "source": "fiches_ministere_travail",
        "title": "La démission : comment présenter une démission ?",
        "url": "https://travail-emploi.gouv.fr/droit-du-travail/la-rupture-du-contrat-de-travail/article/la-demission#Comment-presenter-une-demission",
      },
      "_type": "cdtn_document_test",
      "highlight": Object {
        "text": Array [
          "La <mark>démission</mark> ne peut être exigée par avance, par exemple, lors de la signature du contrat de travail ou au cours de son exécution.",
          "Le Code du travail ne prévoit aucune forme particulière pour présenter sa <mark>démission</mark> : elle peut être verbale, écrite ou résulter d’un comportement sans ambiguïté du salarié (ce qui n’est pas le cas, par",
          "L’écrit permet également de définir le début du préavis.Certaines conventions collectives prévoient d’ailleurs que la <mark>démission</mark> doit être écrite et adressée par lettre recommandée avec avis  de réception",
          "du travail à l’issue des congés payés).Toutefois, pour éviter les contestations sur l’intention même de démissionner ou sur la date de la fin du contrat de travail, le salarié a intérêt à remettre sa <mark>démission</mark>",
        ],
        "title": Array [
          "La <mark>démission</mark> : comment présenter une <mark>démission</mark> ?",
        ],
        "title.french_stemmed": Array [
          "La <mark>démission</mark> : comment présenter une <mark>démission</mark> ?",
        ],
      },
    },
    Object {
      "_id": "4",
      "_index": "cdtn_document_test",
      "_score": 3.9669623,
      "_source": Object {
        "slug": "demission-dun-salarie",
        "source": "fiches_service_public",
        "title": "Démission d'un salarié",
        "url": "https://www.service-public.fr/particuliers/vosdroits/F2883",
      },
      "_type": "cdtn_document_test",
      "highlight": Object {
        "text": Array [
          "Dans certains cas, vous pouvez revenir sur votre <mark>démission</mark>. La <mark>démission</mark> ne doit pas être abusive, c'est-à-dire prise avec l'intention de nuire à l'employeur.",
          "Il n'y a pas de procédure légale imposée pour signifier une <mark>démission</mark>. Vous pouvez prévenir votre employeur par oral ou par écrit, en lui adressant une lettre de <mark>démission</mark>.",
          "Lettre de <mark>démission</mark> du salarié Direction de l'information légale et administrative (Premier ministre) Des dispositions conventionnelles peuvent imposer l'envoi de la lettre de <mark>démission</mark> par lettre recommandée",
          "Une absence injustifiée ou un abandon de poste ne peuvent pas être considérés comme une <mark>démission</mark>.",
          "À savoirle préavis commence à courir à compter de la notification à l'employeur de votre <mark>démission</mark>.",
        ],
        "title": Array [
          "<mark>Démission</mark> d'un salarié",
        ],
        "title.french_stemmed": Array [
          "<mark>Démission</mark> d'un salarié",
        ],
      },
    },
    Object {
      "_id": "5",
      "_index": "cdtn_document_test",
      "_score": 3.744854,
      "_source": Object {
        "slug": "demission-dune-assistante-maternelle",
        "source": "fiches_service_public",
        "title": "Démission d'une assistante maternelle",
        "url": "https://www.service-public.fr/particuliers/vosdroits/F33164",
      },
      "_type": "cdtn_document_test",
      "highlight": Object {
        "text": Array [
          "Lettre de <mark>démission</mark> du salarié Direction de l'information légale et administrative (Premier ministre) Respect d'un préavis La date de 1re présentation de la lettre recommandée de <mark>démission</mark> fixe le point",
          "L'assistante maternelle peut rompre son contrat de travail en présentant sa <mark>démission</mark> par lettre recommandée avec AR.",
          "L'assistante maternelle (ou assistant maternel) agréée qui souhaite rompre son contrat de travail doit informer le particulier employeur par écrit et respecter un préavis.Envoi d'une lettre de <mark>démission</mark>",
        ],
        "title": Array [
          "<mark>Démission</mark> d'une assistante maternelle",
        ],
        "title.french_stemmed": Array [
          "<mark>Démission</mark> d'une assistante maternelle",
        ],
      },
    },
    Object {
      "_id": "6",
      "_index": "cdtn_document_test",
      "_score": 2.8796601,
      "_source": Object {
        "slug": "dans-les-hcr-quel-est-le-preavis-de-demission",
        "source": "faq",
        "title": "Dans les HCR, quel est le préavis de démission ?",
      },
      "_type": "cdtn_document_test",
      "highlight": Object {
        "text": Array [
          "Le préavis de <mark>démission</mark> diffère suivant la qualification.",
        ],
        "title": Array [
          "Dans les HCR, quel est le préavis de <mark>démission</mark> ?",
        ],
        "title.french_stemmed": Array [
          "Dans les HCR, quel est le préavis de <mark>démission</mark> ?",
        ],
      },
    },
    Object {
      "_id": "7",
      "_index": "cdtn_document_test",
      "_score": 2.1730855,
      "_source": Object {
        "slug": "joccupe-un-poste-de-vendeuse-en-boulangerie-patisserie-et-je-viens-de-poser-ma-demission-quelles-sont-les-consequences-dun-arret-maladie-pendant-la-periode-de-preavis-est-ce-que-je-peux-etre-sanctionnee-en-cas-darret-de-travail",
        "source": "faq",
        "title": "J'occupe un poste de vendeuse en boulangerie-pâtisserie et je viens de poser ma démission. Quelles sont les conséquences d’un arrêt maladie pendant la période de préavis ? Est-ce que je peux être sanctionnée en cas d’arrêt de travail ?",
      },
      "_type": "cdtn_document_test",
      "highlight": Object {
        "text": Array [
          "Vous pouvez être en arrêt maladie pendant le préavis de <mark>démission</mark> ; cette situation est sans incidence sur son déroulement et sur sa date d’expiration.",
        ],
        "title": Array [
          "J'occupe un poste de vendeuse en boulangerie-pâtisserie et je viens de poser ma <mark>démission</mark>. Quelles sont les conséquences d’un arrêt maladie pendant la période de préavis ?",
        ],
        "title.french_stemmed": Array [
          "J'occupe un poste de vendeuse en boulangerie-pâtisserie et je viens de poser ma <mark>démission</mark>. Quelles sont les conséquences d’un arrêt maladie pendant la période de préavis ?",
        ],
      },
    },
  ],
  "max_score": 4.252878,
  "total": 7,
}
`;
